--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/score_text_title_size"
+                android:textColor="@color/score_text"
                 android:text="@string/score"
                 android:layout_gravity="center_horizontal"
                 android:gravity="center"
@@ -42,6 +43,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/score_text_content_size"
+                android:textColor="@color/score_text"
                 android:text="0"
                 android:id="@+id/textScore"
                 android:layout_gravity="center_horizontal"
@@ -62,6 +64,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/score_text_title_size"
+                android:textColor="@color/score_text"
                 android:text="@string/highscore"
                 android:layout_gravity="center_horizontal"
                 android:gravity="center"
@@ -71,6 +74,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/score_text_content_size"
+                android:textColor="@color/score_text"
                 android:text="0"
                 android:id="@+id/textHighScore"
                 android:layout_gravity="center_horizontal"
