Fix menu item colours

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,9 +1,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="nl.teamone.settingsun.MainActivity">
-    <item android:id="@+id/back" android:icon="@drawable/ic_action_back"
-     android:title ="back to last position"/>
-    <item android:id="@+id/delete" android:icon="@drawable/ic_action_delete"
-     android:title = "back to start position"   />
+    <item
+        android:id="@+id/action_back"
+        app:showAsAction="always"
+        android:icon="@drawable/ic_action_back"
+        android:title="@string/back" />
+    <item
+        android:id="@+id/action_reset"
+        app:showAsAction="always"
+        android:icon="@drawable/ic_action_restart"
+        android:title="@string/restart" />
 </menu>
