--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context="nl.teamone.settingsun.MainActivity"
     android:orientation="vertical">
 
-    <nl.teamone.settingsun.widgets.GameView
+    <nl.teamone.settingsun.game.GameBoardView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
