--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,14 +7,19 @@
     tools:context="nl.teamone.settingsun.MainActivity"
     android:orientation="vertical">
 
-    <nl.teamone.settingsun.game.GameBoardView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:id="@+id/GameBoardView" />
+        android:padding="8dp"
+        android:background="@color/overlay">
+        <nl.teamone.settingsun.game.GameBoardView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/GameBoardView"
+            android:layout_margin="8dp" />
+    </RelativeLayout>
+
 
     <LinearLayout
         android:orientation="horizontal"
