--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,13 @@
     <color name="primary">#fbca37</color>
     <color name="primary_dark">#ffd3aa2e</color>
     <color name="accent">#f48136</color>
+    <color name="overlay">#0FFFFFFF</color>
+
+    <color name="red">#ffff1b5c</color>
+    <color name="blue">#ff062457</color>
+    <color name="yellow">#FFBE1B</color>
+    <color name="block_bg">#ffffd581</color>
+    <color name="block_stroke">#ffff5e00</color>
 
     <color name="score_text">#333333</color>
     <color name="bg">#333333</color>
